compiler-core/main/__core/type_/snapshots/gleam_core____core__type___tests__const_record_update_non_record.snap
---
source: compiler-core/src_refactored/__core/type_/tests.rs
assertion_line: 2410
expression: "pub type Person { Person(name: String, age: Int) }\n\n        pub const number = 42\n        pub const bob = Person(..number, name: \"Bob\")"
snapshot_kind: text
---
----- SOURCE CODE
pub type Person { Person(name: String, age: Int) }

        pub const number = 42
        pub const bob = Person(..number, name: "Bob")

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:4:34
  │
4 │         pub const bob = Person(..number, name: "Bob")
  │                                  ^^^^^^

Expected type:

    Person

Found type:

    Int
