compiler-core/main/__core/type_/snapshots/gleam_core____core__type___tests__private_types_not_available_in_other_modules.snap
---
source: compiler-core/src_refactored/__core/type_/tests.rs
assertion_line: 3323
expression: "\nimport wibble\n\ntype Wibble {\n  Wibble(wibble.Wibble)\n}\n"
snapshot_kind: text
---
----- SOURCE CODE
-- wibble.gleam
type Wibble

-- main.gleam

import wibble

type Wibble {
  Wibble(wibble.Wibble)
}


----- ERROR
error: Unknown module type
  ┌─ /src/one/two.gleam:5:10
  │
5 │   Wibble(wibble.Wibble)
  │          ^^^^^^^^^^^^^

The module `wibble` does not have a `Wibble` type.
